merubah tilt JS

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section {
 
 .keyboard-box:hover .keyboard-detail-button {
     opacity: 1;
-    buttom: 20px;
+    bottom: 20px;
 }
 
 .keyboard-img {
